--- a/components/style/fonts.css
+++ b/components/style/fonts.css
@@ -12,6 +12,12 @@
   font-display: swap;
 }
 @font-face {
+  font-family: "agrandir";
+  src: url("/fonts/agrandir/Agrandir-GrandHeavy.otf");
+  font-weight: 900;
+  font-display: swap;
+}
+@font-face {
   font-family: "bagnard";
   src: url("/fonts/bagnard/Bagnard.otf");
   font-style: normal;
